add english lang [RAW]

--- a/src/Template/cup/editor.twig
+++ b/src/Template/cup/editor.twig
@@ -45,7 +45,7 @@
                             iframe: true,
                             width: '100%',
                             height: '345',
-                            language: 'ru',
+                            language: '{{ _lang }}',
 
                             htmlRemoveTags: [],
                             htmlAllowedAttrs: ['.*'],
