--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Страницы</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'Страницы'|locale }}</h2>
             </div>
         </div>
     </div>
@@ -17,17 +17,17 @@
                 <form method="post" enctype="multipart/form-data">
                     <div class="card-header">
                         <div class="card-head-row">
-                            <div class="card-title">{{ item.uuid ? 'Редактирование страницы ' ~ item.title : 'Создание новой страницы' }}</div>
+                            <div class="card-title">{{ item.uuid ? 'Редактирование страницы '|locale ~ item.title : 'Создание новой страницы'|locale }}</div>
 
                             <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active show" data-toggle="pill" href="#page" role="tab">
-                                        Страница
+                                        {{ 'Страница'|locale }}
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#other" role="tab">
-                                        Дополнительно
+                                        {{ 'Дополнительно'|locale }}
                                     </a>
                                 </li>
                             </ul>
@@ -40,24 +40,24 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Название',
+                                            'label': 'Название'|locale,
                                             'type': 'text',
                                             'name': 'title',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Краткое описание страницы"></i>',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Краткое описание страницы'|locale) ~ '"></i>',
                                             'args': {
                                                 'value': item.title,
                                                 'required': true,
-                                                'placeholder': 'О нас',
+                                                'placeholder': 'О нас'|locale,
                                             }
                                         } %}
                                     </div>
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Адрес',
+                                            'label': 'Адрес'|locale,
                                             'type': 'text',
                                             'name': 'address',
                                             'prefix': base_url() ~ '/',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Название страницы. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов"></i>',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Название страницы. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов')|locale ~ '"></i>',
                                             'args': {
                                                 'value': item.address,
                                                 'placeholder': 'about',
@@ -69,7 +69,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         {% include 'cup/editor.twig' with {
-                                            'label': 'Тело страницы',
+                                            'label': 'Тело страницы'|locale,
                                             'name': 'content',
                                             'args': {
                                                 'value': item.content
@@ -84,7 +84,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Дата',
+                                            'label': 'Дата'|locale,
                                             'type': 'datetime',
                                             'name': 'date',
                                             'args': {
@@ -97,22 +97,22 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Тип содержимого',
+                                            'label': 'Тип содержимого'|locale,
                                             'type': 'select',
                                             'name': 'type',
-                                            'message': 'Если нет понимания на что влияет это поле, оставьте значение по-умолчанию',
+                                            'message': 'Если нет понимания на что влияет это поле, оставьте значение по-умолчанию'|locale,
                                             'args': {
-                                                'option': reference('/App/Domain/Types/PageTypeType::LIST'),
+                                                'option': _(reference('/App/Domain/Types/PageTypeType::LIST')),
                                                 'selected': item.type
                                             }
                                         } %}
                                     </div>
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Шаблон',
+                                            'label': 'Шаблон'|locale,
                                             'type': 'text',
                                             'name': 'template',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="Укажите название шаблона, который хотите использовать для данной страницы или оставьте <b>page.twig</b>"></i>',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Укажите название шаблона, который хотите использовать для данной страницы или оставьте <b>page.twig</b>')|locale ~ '"></i>',
                                             'args': {
                                                 'value': item.template is not empty ? item.template : 'page.twig',
                                                 'required': true,
@@ -130,7 +130,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Title',
+                                            'label': 'Метатег Title'|locale,
                                             'type': 'text',
                                             'name': 'meta[title]',
                                             'args': {
@@ -141,7 +141,7 @@
 
                                     <div class="col-md-4">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Description',
+                                            'label': 'Метатег Description'|locale,
                                             'type': 'text',
                                             'name': 'meta[description]',
                                             'args': {
@@ -152,7 +152,7 @@
 
                                     <div class="col-md-4">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Keywords',
+                                            'label': 'Метатег Keywords'|locale,
                                             'type': 'text',
                                             'name': 'meta[keywords]',
                                             'args': {
@@ -163,9 +163,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-
                     </div>
 
                     <div class="card-action">
