--- a/src/Template/cup/editor/index-aside.twig
+++ b/src/Template/cup/editor/index-aside.twig
@@ -31,6 +31,6 @@
         </a>
     </div>
     <div class="aside-nav collapse" id="editor-app-nav">
-        {% include 'cup/editor/index-aside-file.twig' %}
+        {% include 'cup/editor/index-aside-file.twig' with {padding: 22} %}
     </div>
 </div>
