--- a/src/Template/cup/editor/index-aside.twig
+++ b/src/Template/cup/editor/index-aside.twig
@@ -22,12 +22,12 @@
     </style>
 
     <div class="aside-header">
-        <div class="title">Выбрать шаблон</div>
+        <div class="title">{{ 'Выбрать шаблон'|locale }}</div>
         <a class="btn btn-primary toggle-editor-nav" data-toggle="collapse" href="#editor-app-nav" role="button" aria-expanded="false" aria-controls="editor-nav">
             <span class="btn-label">
                 <i class="icon-menu"></i>
             </span>
-            Список файлов
+            {{ 'Список файлов'|locale }}
         </a>
     </div>
     <div class="aside-nav collapse" id="editor-app-nav">
