show current locale

--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ parameter('common_lang', 'ru') }}">
+<html lang="{{ _lang }}">
     <!-- Copyright © 2011-{{ 'now'|df('Y') }} WebSpace Engine — OpenSource WebSpace Engine CMS -->
     <!-- Website: https://getwebspace.org -->
 
